# fw_graphics

./: CMakeLists.txt  README.md
include/fw_graphics/: camera.h  index_buffer.h  mesh.h  renderer2d.h  shader.h  vertex.h  vertex_array.h  vertex_buffer.h  vertex_f.h  vertex_int8.h
src/: camera.cpp  index_buffer.cpp  mesh.cpp  renderer2d.cpp  shader.cpp  vertex.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_f.cpp  vertex_int8.cpp
